2010-01-26  Satoshi Yatagawa  <yata_github@y.hauN.org>
	
	* twittering-mode.el (toplevel): Require 'unicode explicitly on
	Emacs21. See a comment of `twittering-ucs-to-char' for more
	details.
	(twittering-ucs-to-char): Check (featurep 'unicode) instead of
	(featurep 'mucs).
	(twittering-ucs-to-char): Update comment.

	* twittering-mode.el (toplevel): On Emacs21, always call
	`set-terminal-coding-system'.

2010-01-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-format-status): Call
	`twittering-make-display-spec-for-icon' only when `window-system'
	is non-nil to avoid error "Non-X frame used" under Emacs which is
	using a text-only terminal.

2010-01-23  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-home-timeline): Add new funciton.

2010-01-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-fill-string): adjust
	`fill-column' to the minimum width of windows displaying
	`*twittering*' buffer. Thanks to Naohiro Aota.

	* twittering-mode.el (twittering-render-timeline): take account of
	multiple windows displaying `*twittering*' buffer.
	Thanks to Naohiro Aota.

	* twittering-mode.el (twittering-format-status): fix an incorrect
	index on filling text for the specifier "%t".

2010-01-22  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-initial-timeline-spec-string):
	Change value to ":home" from ":friends".

	* twittering-mode.el (twittering-status-to-status-datum): Don't
	refer to `twittering-use-native-retweet'.

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Fix a reference to `mes' as a variable, not as a function.

2010-01-22  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-fill-string): add new function
	for generating filled string.
	(twittering-format-status): use `twittering-fill-string'.
	(twittering-render-timeline): remove unnecessary binding of the
	variable `fill-column'.
